Little change on email contact

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <span class="alt-font d-block text-white mb-5px">Visita-nos</span>
                         <p class="w-80 lg-w-100 md-w-70 sm-w-100 mb-10px">Rua Formosa 442, 4000-249 Porto</p>
                         <div><i class="feather icon-feather-phone-call icon-very-small text-white me-10px"></i><a href="tel: 22 200 2670" class="text-white">+351 222 002 670</a></div>
-                        <div><i class="feather icon-feather-mail icon-very-small text-white me-10px"></i><a href="mailto:contacto@baladadasorte.pt" class="text-white text-decoration-line-bottom">contacto@baladadasorte.pt</a></div>
+                        <div><i class="feather icon-feather-mail icon-very-small text-white me-10px"></i><a href="mailto:balada.sorte@sapo.pt" class="text-white text-decoration-line-bottom">balada.sorte@sapo.pt</a></div>
                     </div>
                     <!-- end footer column -->
                 </div>
