little change on contact

--- a/contacto.html
+++ b/contacto.html
@@ -94,7 +94,7 @@
                             <span class="text-white text-decoration-line-bottom mb-10px d-inline-block">Telefone Fixo</span>
                             <p><a href="tel:+351 222 002 670" class="text-white opacity-5">+351 222 002 670</a></p>
                             <span class="text-white text-decoration-line-bottom mb-10px d-inline-block">Mais Questões?</span>
-                            <a href="mailto:info@yourdomain.com" class="text-white opacity-5 d-block">contacto@baladadasorte.pt</a>
+                            <a href="mailto:balada.sorte@sapo.pt" class="text-white opacity-5 d-block">balada.sorte@sapo.pt</a>
                         </div>
                     </div>
                 </div>
